# 2lazy2rest

./: MANIFEST.in  README.rst  mkrst  pyproject.toml  setup.py  tox.ini
2lazy2rest/mkrst_themes/overclock/fonts/: OFL.txt
extensions/: misc.py  misc.py.bak
mkrst/: __init__.py
mkrst_themes/classic/html/: links.html  pygments.css
mkrst_themes/classic/pdf/: stylesheet.style  stylesheet.yaml
mkrst_themes/default/classic/pdf/: stylesheet.style
mkrst_themes/default/html/: stylesheet.css
mkrst_themes/default/odt/: stylesheet.odt
mkrst_themes/default/pdf/: stylesheet.style  stylesheet.yaml
mkrst_themes/overclock/html/: links.html  stylesheet.css
mkrst_themes/overclock/pdf/: stylesheet.style  stylesheet.yaml
mkrst_themes/phi/default/fonts/: LICENSE
mkrst_themes/phi/default/html/: stylesheet.css
mkrst_themes/phi/default/pdf/: stylesheet.style
mkrst_themes/standard/html/: links.html  stylesheet.css
mkrst_themes/standard/odt/: stylesheet.odt
mkrst_themes/standard/pdf/: stylesheet.style  stylesheet.yaml
tests/: test_page.rst
