[tool.poetry]
name = "2lazy2rest"
version = "0.2.2"
description = "Effortless generation of PDF, HTML & ODT documents from RST (ReStructuredText)"
authors = ["fdev31 <fdev31@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "mkrst" },
    { include = "mkrst_themes" },
]


[tool.poetry.scripts]
mkrst = 'mkrst:main'


[tool.poetry.dependencies]
python = "^3.8"
docutils = ">=0.10"
rst2pdf = "^0.99"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3


[tool.mypy]
strict = true
plugins = "pydantic.mypy"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true

[tool.vulture]
exclude = ["tests/"]
min_confidence = 70
paths = ["mkrst"]
sort_by_size = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
